tests/baselines/reference/parserES5SymbolProperty9.errors.txt
parserES5SymbolProperty9.ts(2,6): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.


==== parserES5SymbolProperty9.ts (1 errors) ====
    var x: {
        [Symbol.toPrimitive]: string
         ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }